test/testdata/classes/instance/blank_property_assignment_error.lox
class Foo {
  init() {
    // error: '_' is not a valid property name
    // lint error: '_' is not a valid property name
    this._ = 2;
  }
}
Foo();
